# better_bikereg_search

./: Docker-compose.yaml  Dockerfile  README.md  pyproject.toml
bikereg_search/app/extract/: get_events.py
bikereg_search/backend/app/: README.md
bikereg_search/backend/etl_pipeline/: README.md  etl_pipeline.py
bikereg_search/backend/etl_pipeline/extract/: get_events.py  get_state_and_racetype.py
bikereg_search/backend/etl_pipeline/transform/: README.md  event_address.py  transform_data.py
bikereg_search/backend/etl_pipeline/transform/scripts/: __init__.py  convert_empty_string_to_numpy_nan.py  convert_time_stamp.py
bikereg_search/backend/models/: api_models.py
bikereg_search/models/: api_models.py
bikereg_search/scripts/: get_state_and_racetype.py
dev/: api exploring.ipynb  api_exploring.ipynb  base_notebook.ipynb  drop_down_menu_parsing.ipynb  drop_down_menu_parsing.py  extract_scratch_paper.ipynb  tests_scratch_paper.ipynb  transform_categories_scratch_paper.ipynb  transform_eventcity.ipynb  transform_eventdate.ipynb  transform_timestamp_scratch_paper.ipynb
tests/: test_convert_time_stamp.py  test_get_events.py  tests_categories.py
